<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/navHome"
                android:icon="@drawable/ic_home"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/navAccounts"
                android:icon="@drawable/ic_account_box_black_24dp"
                android:title="@string/accounts"/>
        <item
                android:id="@+id/navFStatements"
                android:icon="@drawable/ic_statements"
                android:title="@string/fStatements"/>
        <item
                android:id="@+id/navReports"
                android:icon="@drawable/ic_statements"
                android:title="@string/reports"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_send"/>
        </menu>
    </item>

</menu>
