<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/purchaseUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/purchaseUnitsPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchaseUnits" />
    <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="number"-->
            <!--android:ems="10"-->
            <!--android:id="@+id/purchaseQuantity" android:layout_marginTop="20dp"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/purchaseUnitsPrice" android:layout_marginEnd="28dp"-->
            <!--app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center"/>-->
    <TextView
        android:id="@+id/purchaseTextView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="44dp"
        android:text="@string/units"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/purchaseUnits"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/purchaseTextView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="15dp"
        android:text="@string/unitsPrice"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/purchaseUnitsPrice"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchaseTextView1" />
    <!--<TextView-->
            <!--android:text="@string/quantity"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/purchaseTextView3"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/purchaseTextView2" app:layout_constraintStart_toStartOf="parent"-->
            <!--android:layout_marginStart="40dp" app:layout_constraintEnd_toStartOf="@+id/purchaseQuantity"-->
            <!--android:layout_marginEnd="44dp" android:textSize="20sp" android:layout_marginTop="39dp"-->
            <!--app:layout_constraintHorizontal_bias="0.971"/>-->
    <TextView
        android:id="@+id/purchaseTextview4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:text="@string/totalCost"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/purchaseTotalCost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchaseTextView2" />

    <TextView
        android:id="@+id/purchaseTotalCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="113dp"
        android:text="@string/totalInitial"
        android:textColor="@color/colorSecondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchaseUnitsPrice" />

    <TextView
        android:id="@+id/purchaseTextview5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="30dp"
        android:text="@string/cash"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/purchaseCash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchaseTextview4" />

    <TextView
        android:id="@+id/purchaseTextview6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="30dp"
        android:text="@string/accountPayable"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/purchaseAccountPayable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchaseTextview5" />

    <EditText
        android:id="@+id/purchaseCash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchaseTotalCost" />

    <TextView
        android:id="@+id/purchaseAccountPayable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="112dp"
        android:text="@string/totalInitial"
        android:textColor="@color/colorSecondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchaseCash" />

    <Button
        android:id="@+id/purchaseDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_ui"
        android:onClick="purchaseDoneEvent"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchaseAccountPayable" />

</androidx.constraintlayout.widget.ConstraintLayout>